Refactoring app (WIP)